add 软件安装列表