@@ -28,7 +28,7 @@
    订阅信息保存在百度云
    SwitchProxy配置通过https://ling-root-bucket.oss-cn-hangzhou.aliyuncs.com/picgo/OmegaOptions.bak
 14. Windows Terminal
-15. PowerShell主题配置及字体配置 TODO
+15. PowerShell主题配置及字体配置
 ## 基础编程软件相关
 1. Docker
 2. 开启Win Telnet客户端,开启linux 子系统
@@ -36,22 +36,68 @@
 4. XShell7/XFtp7
 5. Navicat
 6. Postman
-7.  RDM(Redis图形化工具)
-8.  Vscode
+7. RDM(Redis图形化工具)
+8. Vscode
+   插件:
+   * vscode-icons
+   * xml tools
+   * vetur
+   * remote wsl
+   * live server
+   * GitLens
 9.  PicGo(图床)
-10. Fiddler(抓包工具)
-11. GPG软件
-12. TDEngineGUI(TD图形工具) 选装
-13. Netlimiter (网络限速等) 选装 
-14. OBS Studio(推流工具) 选装
-15. Resilio Sync (文件同步) 选装
+10. jd-jui
+11. Fiddler(抓包工具)
+12. GPG软件
+13. TDEngineGUI(TD图形工具) 选装
+14. Netlimiter (网络限速等) 选装 
+15. OBS Studio(推流工具) 选装
+16. Resilio Sync (文件同步) 选装
 
 ## Java相关
 1. JDK8
 2. Maven3
 3. Tomcat9
 4. IDEA
-5. jd-jui
+   * 插件:
+     插件仓库: https://plugins.zhile.io
+     * .ignore
+     * Alibaba Cloud Toolkit
+     * Alibaba Java Coding Guidelines
+     * CamelCase
+     * GenerateAllSetter
+     * GsonFormatPlus
+     * IDE Eval Reset
+     * JRebel
+     * Key Promoter X
+     * MapStruct support
+     * Maven Helper
+     * MybatisX
+     * Protobuf support
+     * RoboPOJOGenerator
+     * Translation
+   * vm options
+   ```
+   # custom IntelliJ IDEA VM options
+   -Xms4g
+   -Xmx4g
+   -XX:MetaspaceSize=512m
+   -XX:MaxMetaspaceSize=768m
+   -XX:ReservedCodeCacheSize=512m
+   -XX:+AlwaysPreTouch
+   -XX:+UseG1GC
+   -XX:+UseStringDeduplication
+   -ea
+   -Dsun.io.useCanonPrefixCache=false
+   -Djava.net.preferIPv4Stack=true
+   -Djdk.http.auth.tunneling.disabledSchemes=""
+   -XX:+HeapDumpOnOutOfMemoryError
+   -XX:-OmitStackTraceInFastThrow
+   -Djdk.attach.allowAttachSelf
+   -Dkotlinx.coroutines.debug=off
+   -Djdk.module.illegalAccess.silent=true
+   -Dfile.encoding=UTF-8
+   ```
 
 ## php
 1. PhpStorm
